--- a/project02-WorkingWiiApp_derivedFromPowerCheck/Makefile
+++ b/project02-WorkingWiiApp_derivedFromPowerCheck/Makefile
@@ -1,125 +1,221 @@
 #---------------------------------------------------------------------------------
-# Clear implicit rules
+# Clear the implicit built in rules
 #---------------------------------------------------------------------------------
 .SUFFIXES:
-
+#---------------------------------------------------------------------------------
 ifeq ($(strip $(DEVKITPPC)),)
-$(error "Please set DEVKITPPC in your environment. export DEVKITPPC=<path to>/devkitPPC")
+$(error "Please set DEVKITPPC in your environment. export DEVKITPPC=<path to>devkitPPC")
 endif
 
 include $(DEVKITPPC)/wii_rules
 
 #---------------------------------------------------------------------------------
-# Project settings
+# TARGET is the name of the output
+# BUILD is the directory where object files & intermediate files will be placed
+# SOURCES is a list of directories containing source code
+# INCLUDES is a list of directories containing extra header files
 #---------------------------------------------------------------------------------
-TARGET      := boot
-BUILD       := build
-SOURCES     := source
-DATA        := data
+TARGET      :=  boot
+BUILD       :=  build
+SOURCES     :=  source
+DATA        :=  data
 INCLUDES    :=
 
 #---------------------------------------------------------------------------------
-# Compiler flags
+# options for code generation
 #---------------------------------------------------------------------------------
-CFLAGS      := -g -O2 -Wall $(MACHDEP) $(INCLUDE)
-CXXFLAGS    := $(CFLAGS)
-LDFLAGS     := -g $(MACHDEP) -Wl,-Map,$(notdir $@).map
+
+CFLAGS      = -g -O2 -Wall $(MACHDEP) $(INCLUDE)
+CXXFLAGS    = $(CFLAGS)
+
+LDFLAGS     = -g $(MACHDEP) -Wl,-Map,$(notdir $@).map
 
 #---------------------------------------------------------------------------------
-# Libraries
+# any extra libraries we wish to link with the project
 #---------------------------------------------------------------------------------
-LIBS        := -lgrrlib -lfreetype -lbz2 -lfat -ljpeg -lpngu -lpng -lz \
-               -lwiiuse -lbte -logc -lm
+LIBS    := -lgrrlib
+LIBS    += -lfreetype -lbz2 -lfat -ljpeg -lpngu -lpng -lz
+LIBS    += -lwiiuse
+LIBS    += -lbte -logc -lm
 
+#---------------------------------------------------------------------------------
+# list of directories containing libraries, this must be the top level containing
+# include and lib
+#---------------------------------------------------------------------------------
 LIBDIRS     := $(PORTLIBS)
 
 #---------------------------------------------------------------------------------
-# Build system
+# no real need to edit anything past this point unless you need to add additional
+# rules for different file extensions
 #---------------------------------------------------------------------------------
 ifneq ($(BUILD),$(notdir $(CURDIR)))
+#---------------------------------------------------------------------------------
 
 export OUTPUT := $(CURDIR)/$(TARGET)
 
-export VPATH := $(foreach dir,$(SOURCES),$(CURDIR)/$(dir)) \
-                $(foreach dir,$(DATA),$(CURDIR)/$(dir))
+export VPATH  := $(foreach dir,$(SOURCES),$(CURDIR)/$(dir)) \
+                 $(foreach dir,$(DATA),$(CURDIR)/$(dir))
 
 export DEPSDIR := $(CURDIR)/$(BUILD)
 
-# Source files
+#---------------------------------------------------------------------------------
+# automatically build a list of object files for our project
+#---------------------------------------------------------------------------------
 CFILES      := $(foreach dir,$(SOURCES),$(notdir $(wildcard $(dir)/*.c)))
 CPPFILES    := $(foreach dir,$(SOURCES),$(notdir $(wildcard $(dir)/*.cpp)))
 sFILES      := $(foreach dir,$(SOURCES),$(notdir $(wildcard $(dir)/*.s)))
 SFILES      := $(foreach dir,$(SOURCES),$(notdir $(wildcard $(dir)/*.S)))
 BINFILES    := $(foreach dir,$(DATA),$(notdir $(wildcard $(dir)/*.*)))
 
-# Linker
+#---------------------------------------------------------------------------------
+# use CXX for linking C++ projects, CC for standard C
+#---------------------------------------------------------------------------------
 ifeq ($(strip $(CPPFILES)),)
-export LD := $(CC)
+    export LD := $(CC)
 else
-export LD := $(CXX)
+    export LD := $(CXX)
 endif
 
-# Object list
 export OFILES := $(addsuffix .o,$(BINFILES)) \
                  $(CPPFILES:.cpp=.o) $(CFILES:.c=.o) \
                  $(sFILES:.s=.o) $(SFILES:.S=.o)
 
-# Include paths
+#---------------------------------------------------------------------------------
+# build a list of include paths
+#---------------------------------------------------------------------------------
 export INCLUDE := $(foreach dir,$(INCLUDES), -iquote $(CURDIR)/$(dir)) \
                   $(foreach dir,$(LIBDIRS),-I$(dir)/include) \
                   -I$(CURDIR)/$(BUILD) \
                   -I$(LIBOGC_INC)
 
-# Library paths
+#---------------------------------------------------------------------------------
+# build a list of library paths
+#---------------------------------------------------------------------------------
 export LIBPATHS := $(foreach dir,$(LIBDIRS),-L$(dir)/lib) \
                    -L$(LIBOGC_LIB)
 
+export OUTPUT := $(CURDIR)/$(TARGET)
 .PHONY: $(BUILD) clean run
 
+#---------------------------------------------------------------------------------
 $(BUILD):
     @[ -d $@ ] || mkdir -p $@
     @$(MAKE) --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile
 
+#---------------------------------------------------------------------------------
 clean:
     @echo clean ...
     @rm -fr $(BUILD) $(OUTPUT).elf $(OUTPUT).dol
 
+#---------------------------------------------------------------------------------
 run:
     $(MAKE)
     wiiload $(TARGET).dol
 
+#---------------------------------------------------------------------------------
 else
 
 #---------------------------------------------------------------------------------
-# Inside build directory
+# dependency files
 #---------------------------------------------------------------------------------
+DEPENDS := $(OFILES:.o=.d)
 
-# Dependency files (only for C/C++)
-DEPENDS := $(filter %.d,$(OFILES:.o=.d))
+# remove .d files corresponding to binary resources
+BINDEPS := $(addsuffix .d,$(BINFILES))
+DEPENDS := $(filter-out $(BINDEPS),$(DEPENDS))
 
-# Main targets
+#---------------------------------------------------------------------------------
+# main targets
+#---------------------------------------------------------------------------------
 $(OUTPUT).dol: $(OUTPUT).elf
 $(OUTPUT).elf: $(OFILES)
 
 #---------------------------------------------------------------------------------
-# Binary data rules (each extension needs its own rule)
+# This rule links in binary data with the .jpg extension
 #---------------------------------------------------------------------------------
-define BIN2O_RULE
-$1.o: $1
-    @echo $$(notdir $$<)
-    $$(bin2o)
-endef
-
-$(foreach ext, jpg png ttf bmf dol wad certs sys dat tmd tik bin, \
-  $(eval $(call BIN2O_RULE,%.$(ext))) )
+%.jpg.o : %.jpg
+    @echo $(notdir $<)
+    $(bin2o)
 
 #---------------------------------------------------------------------------------
-# Prevent .d generation for binary resources
+# This rule links in binary data with the .png extension
 #---------------------------------------------------------------------------------
-%.jpg.d %.png.d %.ttf.d %.bmf.d %.dol.d %.wad.d %.certs.d %.sys.d %.dat.d %.tmd.d %.tik.d %.bin.d:
-    @:
+%.png.o : %.png
+    @echo $(notdir $<)
+    $(bin2o)
 
-# Include dependency files
+#---------------------------------------------------------------------------------
+# This rule links in binary data with the .ttf extension
+#---------------------------------------------------------------------------------
+%.ttf.o : %.ttf
+    @echo $(notdir $<)
+    $(bin2o)
+
+#---------------------------------------------------------------------------------
+# This rule links in binary data with the .bmf extension
+#---------------------------------------------------------------------------------
+%.bmf.o : %.bmf
+    @echo $(notdir $<)
+    $(bin2o)
+
+#---------------------------------------------------------------------------------
+# This rule links in binary data with the .dol extension
+#---------------------------------------------------------------------------------
+%.dol.o : %.dol
+    @echo $(notdir $<)
+    $(bin2o)
+
+#---------------------------------------------------------------------------------
+# This rule links in binary data with the .wad extension
+#---------------------------------------------------------------------------------
+%.wad.o : %.wad
+    @echo $(notdir $<)
+    $(bin2o)
+
+#---------------------------------------------------------------------------------
+# This rule links in binary data with the .certs extension
+#---------------------------------------------------------------------------------
+%.certs.o : %.certs
+    @echo $(notdir $<)
+    $(bin2o)
+
+#---------------------------------------------------------------------------------
+# This rule links in binary data with the .sys extension
+#---------------------------------------------------------------------------------
+%.sys.o : %.sys
+    @echo $(notdir $<)
+    $(bin2o)
+
+#---------------------------------------------------------------------------------
+# This rule links in binary data with the .dat extension
+#---------------------------------------------------------------------------------
+%.dat.o : %.dat
+    @echo $(notdir $<)
+    $(bin2o)
+
+#---------------------------------------------------------------------------------
+# This rule links in binary data with the .tmd extension
+#---------------------------------------------------------------------------------
+%.tmd.o : %.tmd
+    @echo $(notdir $<)
+    $(bin2o)
+
+#---------------------------------------------------------------------------------
+# This rule links in binary data with the .tik extension
+#---------------------------------------------------------------------------------
+%.tik.o : %.tik
+    @echo $(notdir $<)
+    $(bin2o)
+
+#---------------------------------------------------------------------------------
+# This rule links in binary data with the .bin extension
+#---------------------------------------------------------------------------------
+%.bin.o : %.bin
+    @echo $(notdir $<)
+    $(bin2o)
+
 -include $(DEPENDS)
 
+#---------------------------------------------------------------------------------
 endif
+#---------------------------------------------------------------------------------
